crates/thegn-host/testdata/zig.txt
1/2 main.test.adds...OK
2/2 main.test.breaks...FAIL (TestUnexpectedResult)
/nix/store/n1hqsn4a4yfmipzyk2byavvx4ccx6ccr-zig-0.16.0/lib/zig/std/testing.zig:615:14: 0x12332b9 in expect (std.zig)
    if (!ok) return error.TestUnexpectedResult;
             ^
/tmp/tmp.sp2Lc2OJsx/zig/main.zig:3:17: 0x1233329 in test.breaks (main.zig)
test "breaks" { try std.testing.expect(2+2==5); }
                ^
1 passed; 0 skipped; 1 failed.
error: the following test command failed with exit code 1:
/home/blake/.cache/zig/o/c1bc7f7930ced8e60df3018593744a0c/test --seed=0xbb36a0ff
